overflow bug fix

--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,11 @@
   padding: 0;
   color: var(--white);
 }
-
+html,
 body {
+}
+
+.wrapper {
   overflow-x: hidden;
 }
 
@@ -150,7 +153,6 @@ nav a:hover {
 .curve {
   position: absolute;
   bottom: 0;
-  transform: translate(0, 50%);
   height: 100px;
   border-radius: 50%;
   width: 100%;
